# gpipe-voxel

./: CHANGELOG.md  README.md  cabal.project  gpipe-voxel.cabal  hie.yaml  shell.nix
app/: Viewer.hs
nix/: pkgs.nix
src/Data/Voxel/Grid/: Unbox.hs
src/Graphics/GPipe/: Voxel.hs
test/Graphics/GPipe/: VoxelTest.hs
